feat: enhance BFAssetMapper and BFAssetService